# ideam-dhime

./: .gitignore  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: algorithm.md  guia_estaciones.xlsx  guia_variables.txt
examples/: example_batch.py
ideam_dhime/: __init__.py  batch.py  catalog.py  catalog_builder.py  chunking.py  constants.py  csv_merge.py  download.py  driver.py  exceptions.py  frequencies.py  locations_generated.py  navigation.py  regenerate_catalog.py  regenerate_stations.py  requests_model.py  scraper.py  session.py  station.py  station_catalog.py  station_catalog_builder.py  stations_generated.py
releases/v0.3.0/: README.md  diff_summary.md
tests/: test_batch_partition.py  test_catalog.py  test_chunking.py  test_cleanup.py  test_csv_merge.py  test_frequencies.py  test_package_api.py  test_requests_model.py  test_runtime_resolution.py  test_station_catalog_builder.py
