[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ideam-dhime"
version = "0.2.1"
description = "Descarga automatizada de series hidrometeorológicas desde el portal DHIME del IDEAM (Colombia)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "David De Leon Perez", email = "ing.daviddeleon@gmail.com" },
]
maintainers = [
  { name = "David De Leon Perez", email = "ing.daviddeleon@gmail.com" },
]
keywords = [
  "IDEAM",
  "DHIME",
  "Colombia",
  "hidrología",
  "meteorología",
  "Selenium",
  "datos abiertos",
  "scraping",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Hydrology",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
  "selenium>=4.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.1",
  "build>=1.0",
  "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/David-R-De-Leon-P/IDEAM_scrapping"
Repository = "https://github.com/David-R-De-Leon-P/IDEAM_scrapping"
Issues = "https://github.com/David-R-De-Leon-P/IDEAM_scrapping/issues"
Documentation = "https://github.com/David-R-De-Leon-P/IDEAM_scrapping#readme"
Changelog = "https://github.com/David-R-De-Leon-P/IDEAM_scrapping/blob/main/CHANGELOG.md"

[project.scripts]
ideam-dhime-regenerate = "ideam_dhime.regenerate_catalog:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ideam_dhime*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
extend-select = ["I", "B", "UP"]
